plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.phlox.server'
version = '1.16.0'

mainClassName = "com.phlox.server.Main"

application {
    mainClass = mainClassName
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources", "../shttps-common/shared-assets"
        }
    }
}

dependencies {
    implementation project(path: ':server-lib')
    implementation project(path: ':shttps-common')
    implementation 'org.json:json:20240303'
    implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
    implementation 'org.slf4j:slf4j-simple:2.0.16'
    implementation 'info.picocli:picocli:4.7.6'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.6'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    manifest {
        attributes 'Main-Class': "$mainClassName"
        attributes 'Class-Path': configurations.compileClasspath.collect { it.getName() }.join(' ')
    }
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

shadowJar {
    // Include everything by default
    from(project.sourceSets.main.output)

    // Remove native libraries for platforms other than Windows and Linux
    exclude 'org/sqlite/native/FreeBSD/**'
    exclude 'org/sqlite/native/Linux-Android/**'
    //exclude 'org/sqlite/native/Linux-Musl/**'
    exclude 'org/sqlite/native/Mac/**'
}

test {
    useJUnitPlatform()
}